# KoreOS

./: README.md
run/: bochconfig.bxrc  bochconfig_debug.bxrc  bx_enh_dbg.ini  koreos.img  make.bat  makerun.bat  run.bat
run/Backup/: bochconfig.bxrc
src/: --CMakeLists.txt  CMakeLists.txt  TODO.txt  link.ld  loader.c  obsolete.c
src/include/: aboutwindow.h  asminc.S  bitmap.h  bugcheck.h  build.h  clockwindow.h  cmdline.h  datetime.h  debug.h  font.h  giman.h  giobjects.h  gitest.h  icon.h  ioctl.h  ioman.h  kdevices.h  keyboard.h  kldr.h  kobjects.h  ktypes.h  launcherwindow.h  machine.h  memman.h  memorymapwindow.h  messaging.h  mouse.h  mystifywindow.h  palettewindow.h  pic.h  pit.h  resman.h  statuscode.h  systemlookandfeel.h  systempropertieswindow.h  textui.h  ui.h  uiappwindow.h  uibutton.h  uicheckbox.h  (+9 more)
src/include/crt/: _null.h  ctype.h  size_t.h  stdint.h  stdio.h  stdlib.h  string.h  va_arg.h  va_end.h  va_list.h  va_size.h  va_start.h
src/lib/: aboutwindow.c  bitmap.c  bugcheck.c  build.c  clockwindow.c  cmdline.c  datetime.c  debug.c  font.c  giman.c  gimanext.c  gitest.c  icon.c  ioman.c  keyboard.c  launcherwindow.c  machine.c  memman.c  memorymapwindow.c  messaging.c  mouse.c  mystifywindow.c  palettewindow.c  pic.c  pit.c  resman.c  systemlookandfeel.c  systempropertieswindow.c  textui.c  ui.c  uiappwindow.c  uibutton.c  uicheckbox.c  uidesktop.c  uiradiobutton.c  uiscrollbar.c  uitestwindow.c  uitextbox.c  utility.c  vga.c  (+2 more)
src/lib/crt/: stdio.c  stdlib.c  string.c
src/mach/x86-32-pc/: def.S
src/mach/x86-32-pc/boot/mbr/: build.bat  link.ld  mbr.S
src/mach/x86-32-pc/boot/vbs/fat12/: build.bat  link.ld  vbs.S
src/mach/x86-32-pc/boot/vbs/fat32/: build.bat  vbs.S
src/mach/x86-32-pc/entry/: entry.S  entry_realmode_routines.S  link.ld
src/mach/x86-32-pc/include/: pc.h  pcbios.h  pcconsole.h  pcio.h  pcmemory.h  pcutility.h
src/mach/x86-32-pc/lib/: pc.c  pcbios.c  pcconsole.c  pcio.c  pcmemory.c  pcutility.c
